--- a/src/assets/styles/web/components/_layout.scss
+++ b/src/assets/styles/web/components/_layout.scss
@@ -17,6 +17,7 @@
 	width: $sidebar-width;
 	background-color: $sidebar-background-color;
 	border-right: $sidebar-border-right;
+	z-index: $sidebar-z-index;
 	@include hover(){
 		@include merge_class(w-10, shadow-lg);
 		width: $sidebar-hover-width;
